--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   gap: ^3.0.1
   supabase_flutter: ^2.6.0
   flutter_dotenv: ^5.1.0
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
