--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   supabase_flutter: ^2.6.0
   flutter_dotenv: ^5.1.0
   get: ^4.6.6
+  geolocator_apple: ^2.3.7
 
 dev_dependencies:
   flutter_test:
